# zkm

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  READMESpanish.md  READMEVietnamese.md  READMEsv.md  READMEtr  ReadmeChinese.md  config.toml  rustc-ice-2024-01-03T01:59:30.811052Z-20490.txt
benchmark/: bench.rs
emulator/: Cargo.toml
emulator/src/: lib.rs  memory.rs  opcode_id.rs  page.rs  readme.md  state.rs  tests.rs  utils.rs
emulator/test-vectors/: hello  test.json
emulator/test-vectors/0_13284491/: input
examples/: README.md  cpu.txt  cpu_amd.txt  gpu.txt  gpu_3080.txt  zkmips.rs
output/: segment0  segment1
prover/: Cargo.toml  p.sh  s.sh
prover/examples/: Cargo.toml  README.md  zkmips.rs
prover/examples/add-go/: add.go  go.mod  go.sum
prover/examples/keccak/guest/: Cargo.toml
prover/examples/keccak/guest/src/: main.rs
prover/examples/keccak/host/: Cargo.toml
prover/examples/keccak/host/src/: main.rs
prover/examples/new/: Cargo.toml  rust-toolchain
prover/examples/new/fibonacci/program/: Cargo.toml
prover/examples/new/fibonacci/program/src/: main.rs
prover/examples/new/fibonacci/script/: Cargo.toml
prover/examples/new/fibonacci/script/src/: main.rs
prover/examples/prove-large-seg/: Cargo.toml
prover/examples/prove-large-seg/src/: main.rs
prover/examples/prove-seg/: Cargo.toml
prover/examples/prove-seg/src/: main.rs
prover/examples/revme/: Cargo.toml  README.md  rust-toolchain.toml
prover/examples/revme/guest/: Cargo.toml
prover/examples/revme/guest/src/: main.rs
prover/examples/revme/host/: Cargo.toml  build.rs
prover/examples/revme/host/src/: main.rs
prover/examples/revme/program/: Cargo.toml
prover/examples/revme/program/src/: main.rs
prover/examples/revme/script/: Cargo.toml
prover/examples/revme/script/src/: main.rs
prover/examples/revme/src/: main.rs
prover/examples/revme/test-vectors/: test.json
prover/examples/sha2/: Cargo.toml
prover/examples/sha2-composition/host/: Cargo.toml
prover/examples/sha2-go/: go.mod  main.go  sha2-go
prover/examples/sha2-go/guest/: go.mod
prover/examples/sha2-go/host/: Cargo.toml
prover/examples/sha2-go/host/src/: main.rs
prover/examples/sha2-precompile/: Cargo.toml  rust-toolchain.toml
prover/examples/sha2-precompile/guest/: Cargo.toml
prover/examples/sha2-precompile/guest/src/: main.rs
prover/examples/sha2-precompile/host/: Cargo.toml
prover/examples/sha2-precompile/host/src/: main.rs
prover/examples/sha2-precompile/script/: Cargo.toml  build.rs
prover/examples/sha2-precompile/script/src/: main.rs
prover/examples/sha2-precompile/src/: main.rs
prover/examples/sha2-rust/: Cargo.toml  rust-toolchain.toml
prover/examples/sha2-rust/guest/src/: main.rs
prover/examples/sha2-rust/host/: Cargo.toml
prover/examples/sha2-rust/host/src/: main.rs
prover/examples/sha2-rust/program/: Cargo.toml
prover/examples/sha2-rust/script/: Cargo.toml
prover/examples/sha2-rust/script/src/: main.rs
prover/examples/sha2-syscall/guest/: Cargo.toml
prover/examples/sha2-syscall/guest/src/: consts.rs  core_api.rs  lib.rs  main.rs
prover/examples/sha2-syscall/host/: Cargo.toml
prover/examples/sha2/src/: main.rs
prover/examples/split-seg/: Cargo.toml
prover/examples/split-seg/src/: main.rs
prover/examples/utils/: Cargo.toml
prover/examples/utils/src/: utils.rs
prover/src/: all_stark.rs  config.rs  constraint_consumer.rs  cross_table_lookup.rs  fixed_recursive_verifier.rs  lib.rs  logic.rs  lookup.rs  prover.rs  recursive_verifier.rs  stark.rs  util.rs  utils.rs  vanishing_poly.rs  verifier.rs
prover/src/arithmetic/: arithmetic_stark.rs  mod.rs  shift.rs  slt.rs  sra.rs  utils.rs
prover/src/cpu/: bootstrap_kernel.rs  cpu_stark.rs  exit_kernel.rs  jumps.rs  misc.rs  mod.rs  shift.rs  syscall.rs
prover/src/cpu/columns/: general.rs  mod.rs  ops.rs
prover/src/cpu/kernel/: assembler.rs  elf.rs
prover/src/cpu/kernel/constants/: mod.rs
prover/src/generation/: mod.rs  outputs.rs  state.rs
prover/src/keccak/: keccak_stark.rs
prover/src/keccak_sponge/: columns.rs  keccak_sponge_stark.rs  mod.rs
prover/src/memory/: memory_stark.rs
prover/src/mips_emulator/: mod.rs  page.rs  readme.md  tests.rs  utils.rs
prover/src/poseidon/: poseidon_stark.rs
prover/src/poseidon_sponge/: columns.rs  poseidon_sponge_stark.rs
prover/src/sha_compress/: columns.rs  constants.rs  logic.rs  mod.rs  not_operation.rs  sha_compress_stark.rs  wrapping_add_2.rs  wrapping_add_5.rs
prover/src/sha_compress_sponge/: columns.rs  constants.rs  logic.rs  mod.rs  sha_compress_sponge_stark.rs
prover/src/sha_extend/: columns.rs  constants.rs  logic.rs  mod.rs  rotate_right.rs  sha_extend_stark.rs  shift_right.rs  wrapping_add_4.rs
prover/src/sha_extend_sponge/: columns.rs  logic.rs  mod.rs  sha_extend_sponge_stark.rs
prover/src/witness/: memory.rs  mod.rs  operation.rs  traces.rs  transition.rs  util.rs
prover/test-vectors/0_13284491/: json_0x4e6922343eb1dd2c26893eb95c533f7e56b6ad20d45233894142563589e919e6  json_0x5737d339648b5f5ed0535e6f228ca7c4715b61f4d43feb295de61eba664b4799  json_0x6555bf61de1b3d8af103e5441c03d16e4809401c1a9290ab986c7ca0ddbda6ed
prover/tests/: simple_recursion.rs
recursion/: Cargo.toml  build.rs
recursion/elf-files/: sha2-elf
recursion/src/: lib.rs
recursion/src/snark/: mod.rs  snark.rs  snarks.rs
recursion/src/snark/libsnark/: contract.go  go.mod  go.sum  libsnark.go  libsnark.h  snark_prover.go
runtime/entrypoint/: Cargo.toml
runtime/entrypoint/src/: heap.rs  lib.rs  libm.rs  memcpy.s  memset.s
runtime/entrypoint/src/syscalls/: halt.rs  io.rs  keccak.rs  memory.rs  mod.rs  sha256.rs  sys.rs
runtime/precompiles/: Cargo.toml
runtime/precompiles/src/: io.rs  lib.rs  utils.rs
src/: all_stark.rs  benchmark.rs  config.rs  cross_table_lookup.rs  fixed_recursive_verifier.rs  get_challenges.rs  lib.rs  logic.rs  lookup.rs  profile.rs  proof.rs  prover.rs  recursive_verifier.rs  (+4 more)
zkvm/entrypoint/: Cargo.toml
zkvm/entrypoint/src/: lib.rs  memcpy.s  memset.s
zkvm/entrypoint/src/syscalls/: halt.rs  io.rs  mod.rs
(+118 files in other folders)
