[workspace]
members = [
  "runtime/*",
  "emulator",
  "prover",
  "recursion",
  "build",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.fast]
inherits = "release"
debug = true
debug-assertions = true

