[workspace]
members = [
    "runtime/*",
    "emulator",
    "prover",
    "recursion",
    "build",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.fast]
inherits = "release"
debug = true
debug-assertions = true

[patch."https://github.com/zkMIPS/plonky2.git"]
plonky2 = { path = "../plonky2-origin/plonky2" }
starky = { path = "../plonky2-origin/starky" }
plonky2_util = { path = "../plonky2-origin/util" }
plonky2_maybe_rayon = { path = "../plonky2-origin/maybe_rayon" }
