[workspace]
members = [
  "revme/host",
  "sha2-rust/host",
  "sha2-composition/host",
  "sha2-go/host",
  "sha2-syscall/host",
  "keccak/host",
  "split-seg",
  "prove-seg",
  "prove-large-seg"
]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"

[workspace.dependencies]
zkm-prover = { path = "../../prover" }
zkm-emulator = { path = "../../emulator" }
zkm-build = { path = "../../build" }
