[package]
name = "zkm-runtime"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
zkm-precompiles = { path = "../precompiles" }
bincode = "1.3.3"
cfg-if = "1.0.0"
getrandom = { version = "0.2.14", features = ["custom"] }
rand = "0.8.5"
serde = { version = "1.0.201", features = ["derive"] }
libm = { version = "0.2.8", optional = true }
lazy_static = "1.4.0"
sha2 = { version = "0.10.8", default-features = false }
bytemuck = "1.13"

[features]
default = ["libm"]
libm = ["dep:libm"]
