[package]
name = "zkm-precompiles"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
bincode = "1.3.3"
cfg-if = "1.0.0"
getrandom = { version = "0.2.14", features = ["custom"] }
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.201", features = ["derive"] }
num = { version = "0.4.3" }
