[package]
name = "zkm-zkvm"
version = "0.1.0"
edition = "2021"

[dependencies]
zkm-precompiles = { path = "../precompiles" }
bincode = "1.3.3"
cfg-if = "1.0.0"
getrandom = { version = "0.2.14", features = ["custom"] }
once_cell = "1.19.0"
rand = "0.8.5"
serde = { version = "1.0.201", features = ["derive"] }
libm = { version = "0.2.8", optional = true }
sha2 = { version = "0.10.8" }
lazy_static = "1.4.0"

[features]
default = ["libm"]
libm = ["dep:libm"]
