[workspace]
[package]
name = "evm"
version = "0.1.0"
edition = "2021"

#[[bin]]
#name = "revme"
#path = "src/lib.rs"

[dependencies]
zkm-runtime = { path = "../../../../runtime/entrypoint" }
revm = { git = "https://github.com/zkMIPS/revm", branch = "zkm", default-features = false, features = [ "serde" ] }
models = { git = "https://github.com/zkMIPS/revme", branch = "feat/zkm", package = "models" }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
k256 = { version = "0.13.3", features = ["ecdsa"], default-features = false }
libc = { version = "0.2" , features = ["extra_traits"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
