[workspace]
[package]
name = "evm"
version = "0.1.0"
edition = "2021"

#[[bin]]
#name = "revme"
#path = "src/lib.rs"

[dependencies]
zkm-runtime = { path = "../../../../runtime/entrypoint" }
guest = { git = "https://github.com/zkMIPS/revme.git", package = "guest", branch = "cbor-zkm" }
k256 = { version = "0.13.3", features = ["ecdsa"], default-features = false }
libc = { version = "0.2", features = ["extra_traits"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
