[package]
name = "sha2-syscall-host"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
zkm-prover = { workspace = true }
zkm-emulator = { workspace = true }
zkm-utils = { path = "../../utils" }


log = { version = "0.4.14", default-features = false }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5.0"
hex = "0.4"
env_logger = "0.11.5"
anyhow = "1.0.75"

[build-dependencies]
zkm-build = { workspace = true }
